# py-stdlib

./: CMakeLists.txt  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
native/: CMakeLists.txt
native/src/: regex_wrapper.cpp  regex_wrapper.pyi
src/stdlib/: __init__.py  _cffi_util.py  pathlib.py  re.py  time.py
src/stdlib/csv/: __init__.py  _csv.py
stdlib/: _os_types.py  datetime.py  math.py  os.py  pathlib.py  random.py  re.py  time.py
tests/: conftest.py  test_csv.py  test_datetime.py  test_math.py  test_os.py  test_random.py  test_re.py  test_time.py
