[project]
name = "stdlib"
version = "0.0.1"
description = "Implement stdlib in pure python using ffis"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[tool.isort]
profile = "black"

[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.14",
    "ninja>=1.10",
]
build-backend = "scikit_build_core.build"


[tool.scikit-build]
cmake.define.CMAKE_BUILD_TYPE = "Release"
cmake.define.CMAKE_INSTALL_LIBDIR = "lib"
cmake.define.CMAKE_INSTALL_INCLUDEDIR = "include"
cmake.define.CMAKE_INSTALL_BINDIR = "bin"
cmake.define.CMAKE_INSTALL_DATADIR = "share"
